# chai-rs

./: Cargo.toml
src/: buffer.rs  chai.rs  main.rs
src/components/: editor.rs  mod.rs  pane.rs  text_block.rs
src/core/: buffer.rs  coords.rs  document.rs  extended_linked_list.rs  mod.rs
