[package]
name = "chai-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures-core = "0.3.30"
futures-util = "0.3.30"
once_cell = "1.19.0"
regex = "1.10.3"
ropey = "1.6.1"
tokio = { version = "1.40.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
